--- a/Lentokonepeli/gamestyle.css
+++ b/Lentokonepeli/gamestyle.css
@@ -1,35 +1,38 @@
 .flex-wrap
 {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     width: auto;
     height: auto;
     padding: 4rem;
-    margin: 0px;
+    margin: 5px;
     position: relative;
     overflow: hidden;
+    flex-direction: row;
+    align-content: center;
+    column-gap: 10px;
 
 
 }
 #map
 {
-    width: 3600px;
-    height: 1000px;
+    width: 300rem;
+    height: 50rem;
     background-color: #000000;
     border: 1px solid #000000;
     margin: 0px;
     padding: 0px;
     position: relative;
     overflow: hidden;
-    width: 100%;
+    float: left;
 
 }
 header
 {
-    /* header keskelle sinisellä taustalla teksti mustalla*/
-    background-color: #0000FF;
+    /* sinivalko gradient tausta. ylhäätä alas*/
+    background: linear-gradient(to bottom, #0000FF, #FFFFFF);
     width: 100%;
     height: 100px;
     text-align: center;
@@ -41,6 +44,19 @@ header
 
 
     
+}
+footer
+{
+    /* sinivalko gradient tausta. alhaalta ylös*/
+    background: linear-gradient(to top, #0000FF, #FFFFFF);
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    padding: 4rem;
+    margin: 0px;
+    position: relative;
+    overflow: hidden;
+    color: #000000;
 }
 li
 {
@@ -61,6 +77,7 @@ a
     font-size: 1.5rem;
     color: #000000;
     text-decoration: none;
+    
 }
 .kama
 {
@@ -71,6 +88,7 @@ a
     position: relative;
     overflow: hidden;
     width: 100%;
+    border: 1px solid #000000;
    
 }
 
