--- a/Lentokonepeli/gamestyle.css
+++ b/Lentokonepeli/gamestyle.css
@@ -37,10 +37,11 @@ header
     height: 100px;
     text-align: center;
     padding: 4rem;
-    margin: 0px;
+
     position: relative;
     overflow: hidden;
     color: #000000;
+    margin: -15px;
 
 
     
@@ -53,7 +54,7 @@ footer
     height: 100px;
     text-align: center;
     padding: 4rem;
-    margin: 0px;
+    margin: -15px;
     position: relative;
     overflow: hidden;
     color: #000000;
@@ -93,3 +94,34 @@ a
 }
 
 img.huechange { filter: hue-rotate(120deg); }
+
+
+
+
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 6px 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+  border-radius: 6px;
+  border: none;
+
+  color: #fff;
+  background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
+   background-origin: border-box;
+  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.button:focus {
+  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+  outline: 0;
+}
+*
+{
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
